homeassistant/ha-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: home-assistant
  name: ha-home-assistant
  namespace: ha
spec:
  ports:
  - name: api
    port: 8123
    protocol: TCP
    #targetPort: 8123
  - name: configurator
    port: 3218
    protocol: TCP
    #targetPort: 3218
  selector:
    app.kubernetes.io/instance: ha
    app.kubernetes.io/name: home-assistant
  sessionAffinity: None
  type: LoadBalancer
  externalTrafficPolicy: Local
